tests/baselines/reference/extendGlobalThis(strict=true).errors.txt
index.ts(3,12): error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.


==== extension.d.ts (0 errors) ====
    declare global {
        namespace globalThis  {
            var test: string;
        }
    }
    
    export {}
    
==== index.ts (1 errors) ====
    import "./extention";
    
    globalThis.tests = "a-b";
               ~~~~~
!!! error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.
    console.log(globalThis.test.split("-"));
    